cabal-version: 2.2

name: devin
version: 1.2.0
synopsis: Devin programming language
author: Matteo Morena
category: Language

common common
  default-language: Haskell2010

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-type-defaults
    -Wno-unused-do-bind

library
  import: common
  hs-source-dirs: src

  exposed-modules:
    Devin.Display,
    Devin.Error,
    Devin.Evaluator,
    Devin.Evaluators,
    Devin.Interval,
    Devin.Parsec,
    Devin.Parsers,
    Devin.Syntax,
    Devin.Type,
    Devin.Typer,
    Devin.Typers,
    Devin.Utils

  build-depends:
    base,
    extra,
    parsec,
    vector

test-suite devin-test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs

  other-modules:
    Devin.EvaluatorsSpec,
    Devin.ParsersSpec,
    Devin.TypersSpec

  build-depends:
    base,
    devin,
    hspec,
    parsec

  build-tool-depends:
    hspec-discover:hspec-discover

executable devin
  import: common
  hs-source-dirs: app
  main-is: Main.hs

  other-modules:
    Devin.Debug.Evaluator,
    Devin.Debug.Syntax,
    Devin.Highlight,
    Devin.Highlight.Braces,
    Devin.Highlight.Syntax

  build-depends:
    base,
    containers,
    devin,
    extra,
    gi-gio,
    gi-gobject,
    gi-gtk-hs,
    gi-gtksource,
    haskell-gi-overloading == 0.0,
    parsec,
    text,
    vector

  ghc-options:
    -threaded
