cabal-version: 2.2

name: devin
version: 1.3.0
synopsis: Devin programming language
author: Matteo Morena
category: Language

common common
  default-language: Haskell2010

  ghc-options:
    -Wall
    -Wextra
    -Wno-name-shadowing
    -Wno-type-defaults
    -Wno-unused-do-bind

library
  import: common
  hs-source-dirs: src

  exposed-modules:
    Devin.Display,
    Devin.Error,
    Devin.Evaluator,
    Devin.Evaluators,
    Devin.Interval,
    Devin.Parsec,
    Devin.Parsers,
    Devin.Ratio,
    Devin.Syntax,
    Devin.Type,
    Devin.Typer,
    Devin.Typers

  build-depends:
    -- Haskell Platform, extra
    base,
    vector,
    parsec,
    extra,

test-suite devin-test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs

  other-modules:
    Devin.EvaluatorsSpec,
    Devin.ParsersSpec,
    Devin.TypersSpec

  build-depends:
    -- Haskell Platform
    base,
    parsec,

    -- Others
    hspec,
    devin

  build-tool-depends:
    hspec-discover:hspec-discover

executable devin
  import: common
  hs-source-dirs: app
  main-is: Main.hs

  other-modules:
    Devin.Debug.Evaluator,
    Devin.Debug.Syntax,
    Devin.Highlight,
    Devin.Highlight.Brackets,
    Devin.Highlight.Syntax,
    Devin.Levenshtein

  build-depends:
    -- Haskell Platform, extra
    base,
    containers,
    text,
    vector,
    parsec,
    extra,

    -- haskell-gi
    haskell-gi-overloading == 0.0,
    haskell-gi-base,
    gi-gobject,
    gi-gio,
    gi-gdk,
    gi-gtk < 4,
    gi-gtksource,
    gi-gtk-hs,

    -- Others
    devin

  ghc-options:
    -threaded
